# lab_opencv_basics

./: .gitignore  CMakeLists.txt  Chap04_opencv_features.sln  Chap04_opencv_features.vcxproj  HelloCV.sln  HelloCV.vcxproj  ch07.cpp  ch08.cpp  ch09.cpp  ch10.cpp  ch11.cpp  chap05.cpp  chap05_brightness_contrast.sln  chap05_brightness_contrast.vcxproj  chap05_brightness_contrast.vcxproj.filters  chap06.cpp  chap06_arith_logic_op.sln  chap06_arith_logic_op.vcxproj  chap06_arith_logic_op.vcxproj.filters  chap07_filtering.sln  chap07_filtering.vcxproj  chap07_filtering.vcxproj.filters  chap08_transform.sln  chap08_transform.vcxproj  chap08_transform.vcxproj.filters  chap09_edge_detection.sln  chap09_edge_detection.vcxproj  chap09_edge_detection.vcxproj.filters  chap10_color.sln  chap10_color.vcxproj  chap10_color.vcxproj.filters  chap11_binar_morpho.sln  chap11_binar_morpho.vcxproj  chap11_binar_morpho.vcxproj.filters  coins.json  main.cpp  vs19_opencv454_x64_vc15_debug.props  vs19_opencv454_x64_vc15_release.props
